--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -5,4 +5,11 @@
   <mat-card-subtitle class="subtitle">
     Angular CRUD simples
   </mat-card-subtitle>
+
+<!--
+  Teste usando diretiva estrutural
+  <ul>
+    <li *myFor="let n em [1,2,3]">Teste {{ n }}</li>
+  </ul>
+-->
 </mat-card>
