--- a/frontend/src/app/views/products/products.component.html
+++ b/frontend/src/app/views/products/products.component.html
@@ -1,1 +1,5 @@
-<p>products works!</p>
+<button mat-raised-button (click)="navigateToProductCreate()" color="primary">
+  Novo produto
+</button>
+
+<app-product-list></app-product-list>
