--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title>Novo Produto</mat-card-title>
+  <mat-card-title>Atualizar Produto</mat-card-title>
   <form class="app-form">
       <mat-form-field>
           <input
@@ -22,8 +22,8 @@
           type="button"
           mat-raised-button
           color="primary"
-          (click)="createProduct()">
-          Salvar
+          (click)="updateProduct()">
+          Atualizar
         </button>
         <button
           type="button"
