--- a/frontend/src/app/components/templates/footer/footer.component.html
+++ b/frontend/src/app/components/templates/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="footer">
   <span>
     Desenvolvido com
-    <i class="material-icons red v-middle" title="amor">favorite</i>
+    <i class="material-icons v-middle" title="amor" appRed>favorite</i>
     por <strong>Matheus B. Grigoletto</strong>
   </span>
 </mat-toolbar>
