--- a/frontend/src/app/components/templates/nav/nav.component.html
+++ b/frontend/src/app/components/templates/nav/nav.component.html
@@ -1,13 +1,9 @@
 <mat-sidenav-container class="container">
   <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="64">
     <mat-nav-list class="nav-list">
-      <a mat-list-item routerLink="">
-        <i class="material-icons">home</i>
-        Início
-      </a>
-      <a mat-list-item routerLink="products">
-        <i class="material-icons">storefront</i>
-        Produtos
+      <a mat-list-item *ngFor="let navItem of navItems" routerLink="{{ navItem.routerUrl }}">
+        <i class="material-icons">{{ navItem.icon }}</i>
+        {{ navItem.title }}
       </a>
     </mat-nav-list>
   </mat-sidenav>
